# lunaticvibesf

./: .clang-tidy  .our-tsan-suppressions  CMakeLists.txt  README.md  flake.nix  vcpkg.json
.github/workflows/: cool-workflow.yml
benchmark/: CMakeLists.txt  benchmark_main.cpp  encoding_benchmark.cpp
ext/fmod/: CMakeLists.txt
ext/tinyfiledialogs/: CMakeLists.txt
res/keyconfig/: keyconfig.lr2skin
res/translations/: en.txt
src/common/: CMakeLists.txt  assert.cpp  assert.h  asynclooper.cpp  asynclooper.h  beat.h  crash_handler.cpp  crash_handler.h  encoding.cpp  encoding.h  fraction.cpp  hash.h  keymap.cpp  keymap.h  log.cpp  math_mean.h  math_std_dev.h  play_modifiers.h  str_utils.cpp  str_utils.h  sysutil.cpp  sysutil.h  sysutil_linux.cpp  sysutil_win.cpp  thread_pool.cpp  thread_pool.h  types.cpp  types.h  utils.cpp
src/common/chartformat/: chartformat.cpp  chartformat.h  chartformat_bms.cpp  chartformat_bms.h
src/common/coursefile/: lr2crs.cpp
src/common/difficultytable/: difficultytable.cpp  difficultytable.h  table_bms.cpp  table_bms.h
src/common/entry/: entry.h  entry_folder.cpp  entry_random_song.cpp  entry_song.cpp  entry_table.h
src/config/: CMakeLists.txt  cfg_general.cpp  cfg_input.cpp  cfg_profile.cpp  cfg_profile.h  config.cpp  config.h  config_mgr.cpp  config_mgr.h
src/db/: CMakeLists.txt  db_conn.cpp  db_conn.h  db_lr2_score.cpp  db_score.cpp  db_song.cpp  db_song.h
src/game/: CMakeLists.txt  game.cpp
src/game/arena/: arena_client.cpp  arena_client.h  arena_data.cpp  arena_host.cpp  arena_host.h  arena_internal.cpp
src/game/chart/: chart.cpp  chart.h  chart_bms.cpp  chart_bms.h  chart_load_task.cpp  chart_load_task.h
src/game/graphics/: blend_mode.h  color.h  dxa.cpp  font.h  graph_line.h  graphics.h  image.h  point.h  rect.h  rectf.h  sprite.cpp  sprite.h  sprite_bar_entry.cpp  sprite_bar_entry.h  sprite_bargraph.cpp  sprite_button.cpp  sprite_cursor.cpp  sprite_gauge_grid.cpp  sprite_graph.cpp  sprite_graph.h  sprite_imagetext.cpp  sprite_imagetext.h  sprite_imagetext_charmapping.h  sprite_lane.cpp  sprite_lane.h  sprite_number.cpp  sprite_on_mouse.cpp  sprite_option.cpp  sprite_slider.cpp  sprite_text.cpp  sprite_video.cpp  sprite_video.h  texture_bms_bga.cpp  texture_dynamic.cpp  texture_dynamic.h  texture_extra.cpp  texture_extra.h  texture_video.cpp  texture_video.h  video.cpp  (+1 more)
src/game/graphics/SDL2/: common_SDL2.cpp  graph_line_SDL2.cpp  graphics_SDL2.h  image_SDL2.cpp  image_SDL2.h  input.h  input_SDL2.cpp  input_SDL2.h  ttf_SDL2.cpp  ttf_SDL2.h  window_SDL2.cpp
src/game/input/: input_callback.h  input_dinput8.cpp  input_mgr.cpp  input_mgr.h  input_mgr_sdl.cpp  input_wrapper.cpp  input_wrapper.h
src/game/input/platform/sdl2/: input_sdl2.cpp
src/game/input/platform/windows/: input_dinput8.cpp  input_dinput8.h  input_windows.cpp
src/game/replay/: replay_chart.cpp  replay_chart.h
src/game/ruleset/: ruleset.h  ruleset_bms.cpp  ruleset_bms.h  ruleset_bms_auto.cpp  ruleset_bms_auto.h  ruleset_bms_network.cpp  ruleset_bms_network.h  ruleset_bms_replay.cpp  ruleset_bms_replay.h
src/game/runtime/: generic_info.cpp  generic_info.h  i18n.cpp  i18n.h  state.cpp  state.h
src/game/runtime/index/: number.h  option.h  switch.h  text.h
src/game/scene/: scene.cpp  scene.h  scene_context.cpp  scene_context.h  scene_context_chart.h  scene_context_customize.h  scene_context_keyconfig.h  scene_context_overlay.h  scene_context_play.h  scene_context_select.h  scene_course_result.cpp  scene_course_result.h  scene_customize.cpp  scene_customize.h  scene_decide.cpp  scene_decide.h  scene_exit_trans.h  scene_keyconfig.cpp  scene_keyconfig.h  scene_mgr.cpp  scene_mgr.h  scene_play.cpp  scene_play.h  scene_play_course_trans.h  scene_play_retry_trans.h  scene_pre_select.cpp  scene_pre_select.h  scene_result.cpp  scene_result.h  scene_select.cpp  scene_select.h  scene_select_imgui.cpp
src/game/skin/: skin.cpp  skin.h  skin_lr2.cpp  skin_lr2.h  skin_lr2_animation.h  skin_lr2_bargraph.cpp  skin_lr2_button_callbacks.cpp  skin_lr2_button_callbacks.h  skin_lr2_converters.cpp  skin_lr2_debug.cpp  skin_lr2_debug.h  skin_lr2_dst.cpp  skin_lr2_dst.h  skin_lr2_number.cpp  skin_lr2_number.h  skin_lr2_number_animation.cpp  skin_lr2_number_animation.h  skin_lr2_slider_callbacks.cpp  skin_mgr.cpp  skin_mgr.h
src/game/sound/: sound_fmod.cpp  sound_fmod.h  sound_mgr.cpp  sound_mgr.h  sound_sample.cpp  soundset.cpp  soundset_lr2.cpp
test/: CMakeLists.txt  test_config.cpp  test_main.cpp
test/common/: test_beat.cpp  test_chartformat.cpp  test_chartformat_bms.cpp  test_encoding.cpp  test_fraction.cpp  test_hash.cpp  test_lr2crs.cpp  test_path.cpp
test/db/: test_db_conn.cpp  test_score_db.cpp  test_song_db.cpp
test/game/: test_generic_info.cpp  test_graphics.cpp  test_lr2skin.cpp  test_lr2soundset.cpp  test_ruleset_bms.cpp  test_scene_select.cpp
test/test/bms/: random_5k_7k.bme  random_in_header.bms
